// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GET /api/v1/sites/:id can get a site with a PDS token 1`] = `
{
  "accepted_terms_of_service": true,
  "accepted_terms_of_service_by": "Nice Person",
  "accepted_terms_of_service_on": "2023-05-10T12:37:38.000Z",
  "address_exists": false,
  "address_expired": null,
  "address_verified_at": null,
  "analytics_connection_status": null,
  "chicory_enabled": false,
  "created_at": StringMatching /\\[0-9\\]\\{4\\}-\\[0-9\\]\\{2\\}-\\[0-9\\]\\{2\\}T\\[0-9\\]\\{2\\}:\\[0-9\\]\\{2\\}:\\[0-9\\]\\{2\\}\\\\\\.\\[0-9\\]\\{3\\}Z/,
  "deactivated": false,
  "disable_onboarding_wizard": null,
  "disable_reporting": null,
  "do_not_pay": false,
  "domain": "<randomId>.com",
  "enable_automatic_recipe_selectors": null,
  "features": [],
  "ga4_live_on": null,
  "ga4_property_connected": false,
  "ga4_settings_page": false,
  "ganalytics_refresh_token_expired_at": null,
  "ganalytics_state": null,
  "grow_site_id": null,
  "gutter_enable": null,
  "id": Any<Number>,
  "images": {
    "avatar": "https://mediavine-res.cloudinary.com/<randomId>-author_image.jpg",
    "screenshot": "https://mediavine-res.cloudinary.com/image/url2png/<cloudinaryHash>/c_fill,g_north,h_400,w_600/http://<randomId>.com/%253Ft%253D%2526test%253Dkillswitch/url2png/fullpage%3Dfalse%7Cthumbnail_max_width%3D600%7Cviewport%3D1200x800",
    "site_logo": "https://mediavine-res.cloudinary.com/<randomId>-site_image.jpg",
  },
  "killswitch": null,
  "loyalty_bonus_disabled": null,
  "needs_payment": true,
  "offering_id": 1,
  "opt_in_to_beta_center": false,
  "owned": false,
  "payee_name_updated": null,
  "premiere_invited": null,
  "pro_invited": null,
  "pro_invited_on": null,
  "revenue_share_pro": 0.85,
  "slug": "<randomId>",
  "test_site": false,
  "tipalti_completed": null,
  "title": "Test title <randomId>",
  "uuid": null,
  "zergnet_enabled": false,
}
`;

exports[`GET /api/v1/sites/:id returns a site for a user with site_user post_termination_new_owner role 1`] = `
{
  "accepted_terms_of_service": true,
  "accepted_terms_of_service_by": "Nice Person",
  "accepted_terms_of_service_on": "2023-05-10T12:37:38.000Z",
  "address_exists": false,
  "address_expired": null,
  "address_verified_at": null,
  "analytics_connection_status": null,
  "chicory_enabled": false,
  "created_at": StringMatching /\\[0-9\\]\\{4\\}-\\[0-9\\]\\{2\\}-\\[0-9\\]\\{2\\}T\\[0-9\\]\\{2\\}:\\[0-9\\]\\{2\\}:\\[0-9\\]\\{2\\}\\\\\\.\\[0-9\\]\\{3\\}Z/,
  "deactivated": false,
  "disable_onboarding_wizard": null,
  "disable_reporting": null,
  "do_not_pay": false,
  "domain": "<randomId>.com",
  "enable_automatic_recipe_selectors": null,
  "features": [],
  "ga4_live_on": null,
  "ga4_property_connected": false,
  "ga4_settings_page": false,
  "ganalytics_refresh_token_expired_at": null,
  "ganalytics_state": null,
  "given_notice": null,
  "grow_site_id": null,
  "gutter_enable": null,
  "id": Any<Number>,
  "images": {
    "avatar": "https://mediavine-res.cloudinary.com/<randomId>-author_image.jpg",
    "screenshot": "https://mediavine-res.cloudinary.com/image/url2png/<cloudinaryHash>/c_fill,g_north,h_400,w_600/http://<randomId>.com/%253Ft%253D%2526test%253Dkillswitch/url2png/fullpage%3Dfalse%7Cthumbnail_max_width%3D600%7Cviewport%3D1200x800",
    "site_logo": "https://mediavine-res.cloudinary.com/<randomId>-site_image.jpg",
  },
  "killswitch": null,
  "loyalty": {
    "anniversary_on": "<today>",
    "impressions": 0,
    "impressions_for_eighty": 5000000,
    "impressions_for_eightyfive": 15000000,
    "impressions_for_eightytwofive": 10000000,
    "live_on": "2023-01-01",
    "loyalty_bonus": 0,
    "revenue_share": 0.75,
  },
  "loyalty_bonus_disabled": null,
  "needs_payment": true,
  "offering_id": 1,
  "opt_in_to_beta_center": false,
  "owned": false,
  "payee_name_updated": null,
  "premiere_invited": null,
  "pro_invited": null,
  "pro_invited_on": null,
  "revenue_share_pro": 0.85,
  "slug": "<randomId>",
  "test_site": false,
  "tipalti_completed": null,
  "title": "Test title <randomId>",
  "uuid": null,
  "zergnet_enabled": false,
}
`;

exports[`GET /api/v1/sites/:id returns a site for a user with site_user reporting role 1`] = `
{
  "accepted_terms_of_service": true,
  "accepted_terms_of_service_by": "Nice Person",
  "accepted_terms_of_service_on": "2023-05-10T12:37:38.000Z",
  "address_exists": false,
  "address_expired": null,
  "address_verified_at": null,
  "analytics_connection_status": null,
  "chicory_enabled": false,
  "created_at": StringMatching /\\[0-9\\]\\{4\\}-\\[0-9\\]\\{2\\}-\\[0-9\\]\\{2\\}T\\[0-9\\]\\{2\\}:\\[0-9\\]\\{2\\}:\\[0-9\\]\\{2\\}\\\\\\.\\[0-9\\]\\{3\\}Z/,
  "deactivated": false,
  "disable_onboarding_wizard": null,
  "disable_reporting": null,
  "do_not_pay": false,
  "domain": "<randomId>.com",
  "enable_automatic_recipe_selectors": null,
  "features": [],
  "ga4_live_on": null,
  "ga4_property_connected": false,
  "ga4_settings_page": false,
  "ganalytics_refresh_token_expired_at": null,
  "ganalytics_state": null,
  "given_notice": null,
  "grow_site_id": null,
  "gutter_enable": null,
  "id": Any<Number>,
  "images": {
    "avatar": "https://mediavine-res.cloudinary.com/<randomId>-author_image.jpg",
    "screenshot": "https://mediavine-res.cloudinary.com/image/url2png/<cloudinaryHash>/c_fill,g_north,h_400,w_600/http://<randomId>.com/%253Ft%253D%2526test%253Dkillswitch/url2png/fullpage%3Dfalse%7Cthumbnail_max_width%3D600%7Cviewport%3D1200x800",
    "site_logo": "https://mediavine-res.cloudinary.com/<randomId>-site_image.jpg",
  },
  "killswitch": null,
  "loyalty": {
    "anniversary_on": "<today>",
    "impressions": 0,
    "impressions_for_eighty": 5000000,
    "impressions_for_eightyfive": 15000000,
    "impressions_for_eightytwofive": 10000000,
    "live_on": "2023-01-01",
    "loyalty_bonus": 0,
    "revenue_share": 0.75,
  },
  "loyalty_bonus_disabled": null,
  "needs_payment": true,
  "offering_id": 1,
  "opt_in_to_beta_center": false,
  "owned": false,
  "payee_name_updated": null,
  "premiere_invited": null,
  "pro_invited": null,
  "pro_invited_on": null,
  "revenue_share_pro": 0.85,
  "slug": "<randomId>",
  "test_site": false,
  "tipalti_completed": null,
  "title": "Test title <randomId>",
  "uuid": null,
  "zergnet_enabled": false,
}
`;

exports[`GET /api/v1/sites/:id returns a site for a user with site_user without any roles 1`] = `
{
  "accepted_terms_of_service": true,
  "accepted_terms_of_service_by": "Nice Person",
  "accepted_terms_of_service_on": "2023-05-10T12:37:38.000Z",
  "address_exists": false,
  "address_expired": null,
  "address_verified_at": null,
  "analytics_connection_status": null,
  "chicory_enabled": false,
  "created_at": StringMatching /\\[0-9\\]\\{4\\}-\\[0-9\\]\\{2\\}-\\[0-9\\]\\{2\\}T\\[0-9\\]\\{2\\}:\\[0-9\\]\\{2\\}:\\[0-9\\]\\{2\\}\\\\\\.\\[0-9\\]\\{3\\}Z/,
  "deactivated": false,
  "disable_onboarding_wizard": null,
  "disable_reporting": null,
  "do_not_pay": false,
  "domain": "<randomId>.com",
  "enable_automatic_recipe_selectors": null,
  "features": [],
  "ga4_live_on": null,
  "ga4_property_connected": false,
  "ga4_settings_page": false,
  "ganalytics_refresh_token_expired_at": null,
  "ganalytics_state": null,
  "grow_site_id": null,
  "gutter_enable": null,
  "id": Any<Number>,
  "images": {
    "avatar": "https://mediavine-res.cloudinary.com/<randomId>-author_image.jpg",
    "screenshot": "https://mediavine-res.cloudinary.com/image/url2png/<cloudinaryHash>/c_fill,g_north,h_400,w_600/http://<randomId>.com/%253Ft%253D%2526test%253Dkillswitch/url2png/fullpage%3Dfalse%7Cthumbnail_max_width%3D600%7Cviewport%3D1200x800",
    "site_logo": "https://mediavine-res.cloudinary.com/<randomId>-site_image.jpg",
  },
  "killswitch": null,
  "loyalty_bonus_disabled": null,
  "needs_payment": true,
  "offering_id": 1,
  "opt_in_to_beta_center": false,
  "owned": false,
  "payee_name_updated": null,
  "premiere_invited": null,
  "pro_invited": null,
  "pro_invited_on": null,
  "revenue_share_pro": 0.85,
  "slug": "<randomId>",
  "test_site": false,
  "tipalti_completed": null,
  "title": "Test title <randomId>",
  "uuid": null,
  "zergnet_enabled": false,
}
`;

exports[`GET /api/v1/sites/:id returns a site for an admin 1`] = `
{
  "accepted_terms_of_service": true,
  "accepted_terms_of_service_by": "Nice Person",
  "accepted_terms_of_service_on": "2023-05-10T12:37:38.000Z",
  "address_exists": false,
  "address_expired": null,
  "address_verified_at": null,
  "analytics_connection_status": null,
  "chicory_enabled": false,
  "created_at": StringMatching /\\[0-9\\]\\{4\\}-\\[0-9\\]\\{2\\}-\\[0-9\\]\\{2\\}T\\[0-9\\]\\{2\\}:\\[0-9\\]\\{2\\}:\\[0-9\\]\\{2\\}\\\\\\.\\[0-9\\]\\{3\\}Z/,
  "deactivated": false,
  "disable_onboarding_wizard": null,
  "disable_reporting": null,
  "do_not_pay": false,
  "domain": "<randomId>.com",
  "enable_automatic_recipe_selectors": null,
  "features": [],
  "ga4_live_on": null,
  "ga4_property_connected": false,
  "ga4_settings_page": false,
  "ganalytics_refresh_token_expired_at": null,
  "ganalytics_state": null,
  "given_notice": null,
  "grow_site_id": null,
  "gutter_enable": null,
  "id": Any<Number>,
  "images": {
    "avatar": "https://mediavine-res.cloudinary.com/<randomId>-author_image.jpg",
    "screenshot": "https://mediavine-res.cloudinary.com/image/url2png/<cloudinaryHash>/c_fill,g_north,h_400,w_600/http://<randomId>.com/%253Ft%253D%2526test%253Dkillswitch/url2png/fullpage%3Dfalse%7Cthumbnail_max_width%3D600%7Cviewport%3D1200x800",
    "site_logo": "https://mediavine-res.cloudinary.com/<randomId>-site_image.jpg",
  },
  "killswitch": null,
  "loyalty": {
    "anniversary_on": "<today>",
    "impressions": 0,
    "impressions_for_eighty": 5000000,
    "impressions_for_eightyfive": 15000000,
    "impressions_for_eightytwofive": 10000000,
    "live_on": "2023-01-01",
    "loyalty_bonus": 0,
    "revenue_share": 0.75,
  },
  "loyalty_bonus_disabled": null,
  "needs_payment": true,
  "offering_id": 1,
  "opt_in_to_beta_center": false,
  "owned": false,
  "payee_name_updated": null,
  "premiere_invited": null,
  "pro_invited": null,
  "pro_invited_on": null,
  "revenue_share_pro": 0.85,
  "slug": "<randomId>",
  "test_site": false,
  "tipalti_completed": null,
  "title": "Test title <randomId>",
  "uuid": null,
  "zergnet_enabled": false,
}
`;

exports[`GET /api/v1/sites/:id returns a site for an owner 1`] = `
{
  "accepted_terms_of_service": true,
  "accepted_terms_of_service_by": "Nice Person",
  "accepted_terms_of_service_on": "2023-05-10T12:37:38.000Z",
  "address_exists": false,
  "address_expired": null,
  "address_verified_at": null,
  "analytics_connection_status": null,
  "chicory_enabled": false,
  "created_at": StringMatching /\\[0-9\\]\\{4\\}-\\[0-9\\]\\{2\\}-\\[0-9\\]\\{2\\}T\\[0-9\\]\\{2\\}:\\[0-9\\]\\{2\\}:\\[0-9\\]\\{2\\}\\\\\\.\\[0-9\\]\\{3\\}Z/,
  "deactivated": false,
  "disable_onboarding_wizard": null,
  "disable_reporting": null,
  "do_not_pay": false,
  "domain": "<randomId>.com",
  "enable_automatic_recipe_selectors": null,
  "features": [],
  "ga4_live_on": null,
  "ga4_property_connected": false,
  "ga4_settings_page": false,
  "ganalytics_refresh_token_expired_at": null,
  "ganalytics_state": null,
  "given_notice": null,
  "grow_site_id": null,
  "gutter_enable": null,
  "id": Any<Number>,
  "images": {
    "avatar": "https://mediavine-res.cloudinary.com/<randomId>-author_image.jpg",
    "screenshot": "https://mediavine-res.cloudinary.com/image/url2png/<cloudinaryHash>/c_fill,g_north,h_400,w_600/http://<randomId>.com/%253Ft%253D%2526test%253Dkillswitch/url2png/fullpage%3Dfalse%7Cthumbnail_max_width%3D600%7Cviewport%3D1200x800",
    "site_logo": "https://mediavine-res.cloudinary.com/<randomId>-site_image.jpg",
  },
  "killswitch": null,
  "loyalty": {
    "anniversary_on": "<today>",
    "impressions": 31000,
    "impressions_for_eighty": 5000000,
    "impressions_for_eightyfive": 15000000,
    "impressions_for_eightytwofive": 10000000,
    "live_on": "2023-01-01",
    "loyalty_bonus": 0,
    "revenue_share": 0.75,
  },
  "loyalty_bonus_disabled": null,
  "needs_payment": true,
  "offering_id": 1,
  "opt_in_to_beta_center": false,
  "owned": false,
  "payee_name_updated": null,
  "premiere_invited": null,
  "pro_invited": null,
  "pro_invited_on": null,
  "revenue_share_pro": 0.85,
  "slug": "<randomId>",
  "test_site": false,
  "tipalti_completed": null,
  "title": "Test title <randomId>",
  "uuid": null,
  "zergnet_enabled": false,
}
`;

exports[`GET /api/v1/sites/:id returns a site for an owner with different values 1`] = `
{
  "accepted_terms_of_service": true,
  "accepted_terms_of_service_by": "Nice Person",
  "accepted_terms_of_service_on": "2023-05-10T12:37:38.000Z",
  "address_exists": false,
  "address_expired": null,
  "address_verified_at": null,
  "analytics_connection_status": null,
  "chicory_enabled": false,
  "created_at": StringMatching /\\[0-9\\]\\{4\\}-\\[0-9\\]\\{2\\}-\\[0-9\\]\\{2\\}T\\[0-9\\]\\{2\\}:\\[0-9\\]\\{2\\}:\\[0-9\\]\\{2\\}\\\\\\.\\[0-9\\]\\{3\\}Z/,
  "deactivated": true,
  "disable_onboarding_wizard": true,
  "disable_reporting": true,
  "do_not_pay": true,
  "domain": "<randomId>.com",
  "enable_automatic_recipe_selectors": true,
  "features": [],
  "ga4_live_on": null,
  "ga4_property_connected": false,
  "ga4_settings_page": false,
  "ganalytics_refresh_token_expired_at": "2021-10-19T16:10:50.000Z",
  "ganalytics_state": "CONNECTED",
  "given_notice": true,
  "grow_site_id": "<randomId>-grow",
  "gutter_enable": true,
  "id": Any<Number>,
  "images": {
    "avatar": "https://mediavine-res.cloudinary.com/<randomId>-author_image.jpg",
    "screenshot": "https://mediavine-res.cloudinary.com/image/url2png/<cloudinaryHash>/c_fill,g_north,h_400,w_600/http://<randomId>.com/%253Ft%253D%2526test%253Dkillswitch/url2png/fullpage%3Dfalse%7Cthumbnail_max_width%3D600%7Cviewport%3D1200x800",
    "site_logo": "https://mediavine-res.cloudinary.com/<randomId>-site_image.jpg",
  },
  "killswitch": true,
  "loyalty": {
    "anniversary_on": "<today>",
    "impressions": 0,
    "impressions_for_eighty": 5000000,
    "impressions_for_eightyfive": 15000000,
    "impressions_for_eightytwofive": 10000000,
    "live_on": "2023-01-01",
    "loyalty_bonus": 0,
    "revenue_share": 1,
  },
  "loyalty_bonus_disabled": true,
  "needs_payment": true,
  "offering_id": 1,
  "opt_in_to_beta_center": true,
  "owned": true,
  "payee_name_updated": null,
  "premiere_invited": true,
  "pro_invited": null,
  "pro_invited_on": null,
  "revenue_share_pro": 0.85,
  "slug": "<randomId>",
  "test_site": true,
  "tipalti_completed": null,
  "title": "Test title <randomId>",
  "uuid": "<randomId>",
  "zergnet_enabled": true,
}
`;

exports[`GET /api/v1/sites/:id returns premiere fields for the site 1`] = `
{
  "accepted_terms_of_service": true,
  "accepted_terms_of_service_by": "Nice Person",
  "accepted_terms_of_service_on": "2023-05-10T12:37:38.000Z",
  "address_exists": false,
  "address_expired": null,
  "address_verified_at": null,
  "analytics_connection_status": null,
  "chicory_enabled": false,
  "created_at": StringMatching /\\[0-9\\]\\{4\\}-\\[0-9\\]\\{2\\}-\\[0-9\\]\\{2\\}T\\[0-9\\]\\{2\\}:\\[0-9\\]\\{2\\}:\\[0-9\\]\\{2\\}\\\\\\.\\[0-9\\]\\{3\\}Z/,
  "deactivated": false,
  "disable_onboarding_wizard": null,
  "disable_reporting": null,
  "do_not_pay": false,
  "domain": "<randomId>.com",
  "enable_automatic_recipe_selectors": null,
  "features": [],
  "ga4_live_on": null,
  "ga4_property_connected": false,
  "ga4_settings_page": false,
  "ganalytics_refresh_token_expired_at": null,
  "ganalytics_state": null,
  "given_notice": null,
  "grow_site_id": null,
  "gutter_enable": null,
  "id": Any<Number>,
  "images": {
    "avatar": "https://mediavine-res.cloudinary.com/<randomId>-author_image.jpg",
    "screenshot": "https://mediavine-res.cloudinary.com/image/url2png/<cloudinaryHash>/c_fill,g_north,h_400,w_600/http://<randomId>.com/%253Ft%253D%2526test%253Dkillswitch/url2png/fullpage%3Dfalse%7Cthumbnail_max_width%3D600%7Cviewport%3D1200x800",
    "site_logo": "https://mediavine-res.cloudinary.com/<randomId>-site_image.jpg",
  },
  "killswitch": null,
  "loyalty": {
    "anniversary_on": "<today>",
    "impressions": 0,
    "impressions_for_eighty": 5000000,
    "impressions_for_eightyfive": 15000000,
    "impressions_for_eightytwofive": 10000000,
    "live_on": "2023-01-01",
    "loyalty_bonus": 0,
    "revenue_share": 0.9,
  },
  "loyalty_bonus_disabled": null,
  "needs_payment": true,
  "offering_id": 1,
  "opt_in_to_beta_center": false,
  "owned": false,
  "payee_name_updated": null,
  "premiere_accepted": true,
  "premiere_accepted_by": "Premiere Accepter",
  "premiere_accepted_on": "2021-04-07T01:15:41.000Z",
  "premiere_invited": true,
  "premiere_manage_account": true,
  "pro_invited": null,
  "pro_invited_on": null,
  "revenue_share_pro": 0.85,
  "slug": "<randomId>",
  "test_site": false,
  "tipalti_completed": null,
  "title": "Test title <randomId>",
  "uuid": null,
  "zergnet_enabled": false,
}
`;

exports[`GET /api/v1/sites/:id returns pro fields for the site 1`] = `
{
  "accepted_terms_of_service": true,
  "accepted_terms_of_service_by": "Nice Person",
  "accepted_terms_of_service_on": "2023-05-10T12:37:38.000Z",
  "address_exists": false,
  "address_expired": null,
  "address_verified_at": null,
  "analytics_connection_status": null,
  "chicory_enabled": false,
  "created_at": StringMatching /\\[0-9\\]\\{4\\}-\\[0-9\\]\\{2\\}-\\[0-9\\]\\{2\\}T\\[0-9\\]\\{2\\}:\\[0-9\\]\\{2\\}:\\[0-9\\]\\{2\\}\\\\\\.\\[0-9\\]\\{3\\}Z/,
  "deactivated": false,
  "disable_onboarding_wizard": null,
  "disable_reporting": null,
  "do_not_pay": false,
  "domain": "<randomId>.com",
  "enable_automatic_recipe_selectors": null,
  "features": [],
  "ga4_live_on": null,
  "ga4_property_connected": false,
  "ga4_settings_page": false,
  "ganalytics_refresh_token_expired_at": null,
  "ganalytics_state": null,
  "given_notice": null,
  "grow_site_id": null,
  "gutter_enable": null,
  "id": Any<Number>,
  "images": {
    "avatar": "https://mediavine-res.cloudinary.com/<randomId>-author_image.jpg",
    "screenshot": "https://mediavine-res.cloudinary.com/image/url2png/<cloudinaryHash>/c_fill,g_north,h_400,w_600/http://<randomId>.com/%253Ft%253D%2526test%253Dkillswitch/url2png/fullpage%3Dfalse%7Cthumbnail_max_width%3D600%7Cviewport%3D1200x800",
    "site_logo": "https://mediavine-res.cloudinary.com/<randomId>-site_image.jpg",
  },
  "killswitch": null,
  "loyalty": {
    "anniversary_on": "<today>",
    "impressions": 0,
    "impressions_for_eighty": 5000000,
    "impressions_for_eightyfive": 15000000,
    "impressions_for_eightytwofive": 10000000,
    "live_on": "2023-01-01",
    "loyalty_bonus": 0,
    "revenue_share": 0.85,
  },
  "loyalty_bonus_disabled": null,
  "needs_payment": true,
  "offering_id": 1,
  "opt_in_to_beta_center": false,
  "owned": false,
  "payee_name_updated": null,
  "premiere_invited": null,
  "pro_accepted": "accepted",
  "pro_accepted_by": "Pro Accepter",
  "pro_accepted_on": "2022-09-29T18:35:39.000Z",
  "pro_invited": true,
  "pro_invited_on": "2022-09-29T18:35:38.000Z",
  "pro_last_audit": "2022-11-29",
  "pro_last_inspected": "2022-11-29",
  "revenue_share_pro": 0.85,
  "slug": "<randomId>",
  "test_site": false,
  "tipalti_completed": null,
  "title": "Test title <randomId>",
  "uuid": null,
  "zergnet_enabled": false,
}
`;
